--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,52 +24,54 @@
     <h1 class="visually-hidden">
       CH jewellery
     </h1>
-    <div class="page-header__header header container ">
-      <button type="button" class="page-header__toggle">
-        <span class="visually-hidden">Открыть меню</span>
-        <svg width="25" height="16" viewBox="0 0 25 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-          stroke="currentColor">
-          <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
-        </svg>
-      </button>
-      <form class="header__search search">
-        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
-          <use xlink:href="img/sprite_auto.svg#icon_search"></use>
-        </svg>
-        <label class="visually-hidden" for="search">
-          Type here to search
-        </label>
-        <input type="search" placeholder="Type here to search" id="search" name="q">
-      </form>
-      <div class="header__logo logo">
-        <a class="logo__link" href="main.html" aria-label="Logotype CH jewellery. Go to main page">
-          <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite_auto.svg#logo"></use>
+    <div class="page-header__header header">
+      <div class="header__wrapper container">
+        <button type="button" class="page-header__toggle">
+          <span class="visually-hidden">Открыть меню</span>
+          <svg width="25" height="16" viewBox="0 0 25 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            stroke="currentColor">
+            <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
           </svg>
-        </a>
-      </div>
-      <div class="header__user user">
-        <ul class="user__list">
-          <li class="user__item">
-            <a class="user__popup" href="login.html" aria-label="Go to log in page">
-              <span>
-                Login
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="#" aria-label="Go to cart">
-              <svg width="18" height="16" viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_cart"></use>
-              </svg>
-              <span>Cart</span>
-              <span>0</span>
-            </a>
-        </ul>
+        </button>
+        <form class="header__search search">
+          <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+            <use xlink:href="img/sprite_auto.svg#icon_search"></use>
+          </svg>
+          <label class="visually-hidden" for="search">
+            Type here to search
+          </label>
+          <input type="search" placeholder="Type here to search" id="search" name="q">
+        </form>
+        <div class="header__logo logo">
+          <a class="logo__link" href="main.html" aria-label="Logotype CH jewellery. Go to main page">
+            <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite_auto.svg#logo"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="header__user user">
+          <ul class="user__list">
+            <li class="user__item">
+              <a class="user__popup" href="login.html" aria-label="Go to log in page">
+                <span>
+                  Login
+                </span>
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to cart">
+                <svg width="18" height="16" viewBox="0 0 18 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                  stroke="currentColor">
+                  <use xlink:href="img/sprite_auto.svg#icon_cart"></use>
+                </svg>
+                <span>Cart</span>
+                <span>0</span>
+              </a>
+          </ul>
+        </div>
       </div>
     </div>
-    <nav class="page-header__nav nav container">
+    <nav class="page-header__nav nav">
       <ul class="nav__list nav__list--main">
         <li>
           <a class="nav__link" href="#" aria-label="Go to the section what&#8242;s new">
@@ -150,7 +152,7 @@
               <use xlink:href="img/sprite_auto.svg#icon_close"></use>
             </svg>
           </button>
-          <form class="accordion" method="get" action="https://echo.htmlacademy.ru/">
+          <form class="filters__form accordion" method="get" action="https://echo.htmlacademy.ru/">
             <ul class="filters__list accordion__list">
               <li class="filters__item filter accordion__item">
                 <fieldset>
@@ -298,10 +300,10 @@
                 </fieldset>
               </li>
             </ul>
-            <button class="button button--accent" type="submit">
+            <button class="filters__submit button button--accent" type="submit">
               Apply
             </button>
-            <button class="button" type="button">
+            <button class="filters__reset button" type="button">
               Clear all
             </button>
           </form>
@@ -667,27 +669,31 @@
             </a>
           </li>
         </ul>
-        <div class="products__pagination pagination">
-          <h3 class="visually-hidden">Navigation of products from the catalog</h3>
-          <button type="button">Previous</button>
-          <ul>
-            <li class="pagination__item pagination__item--current">
-              <a class="pagination__link">1</a>
-            </li>
-            <li class="pagination__item">
-              <a class="pagination__link" href="#">2</a>
-            </li>
-            <li class="pagination__item">
-              <a class="pagination__link" href="#">3</a>
-            </li>
-            <li class="pagination__item">
-              <a class="pagination__link" href="#">4</a>
-            </li>
-            <li class="pagination__item">
-              <a class="pagination__link" href="#">5</a>
-            </li>
-          </ul>
-          <button type="button">Next</button>
+      </div>
+    </section>
+    <section class="pagination">
+      <div class="pagination__wrapper container">
+        <h2 class="visually-hidden">Navigation of products from the catalog</h2>
+        <div class="pagination__list">
+        <button type="button">Previous</button>
+        <ul>
+          <li class="pagination__item pagination__item--current">
+            <a class="pagination__link">1</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">2</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">3</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">4</a>
+          </li>
+          <li class="pagination__item">
+            <a class="pagination__link" href="#">5</a>
+          </li>
+        </ul>
+        <button type="button">Next</button>
         </div>
       </div>
     </section>
@@ -832,28 +838,28 @@
           <fieldset>
             <ul>
               <li>
-            <input type="email" name="email" placeholder="Your E-mail" id="e-mail" required />
-            <label class="visually-hidden" for="email">
-              Fill in the required field e-Mail
-            </label>
+                <input type="email" name="email" placeholder="Your E-mail" id="e-mail" required />
+                <label class="visually-hidden" for="email">
+                  Fill in the required field e-Mail
+                </label>
               </li>
               <li>
-            <input type="password" name="password" placeholder="Password" id="password" required />
-            <label for="password">
-              <a href="#" aria-label="Recover password">Forgot your password?</a>
-            </label>
+                <input type="password" name="password" placeholder="Password" id="password" required />
+                <label for="password">
+                  <a href="#" aria-label="Recover password">Forgot your password?</a>
+                </label>
               </li>
             </ul>
             <button class="button button--accent" type="submit">
               Log in
             </button>
             <div class="login__registration">
-            <p>
-              Don&#8242;t have an account?
-            </p>
-            <a href="#" aria-label="Go to registration page">
-              Sign up
-            </a>
+              <p>
+                Don&#8242;t have an account?
+              </p>
+              <a href="#" aria-label="Go to registration page">
+                Sign up
+              </a>
             </div>
           </fieldset>
         </form>
