--- a/source/login.html
+++ b/source/login.html
@@ -24,186 +24,175 @@
     <h1 class="visually-hidden">
       CH jewellery
     </h1>
-    <div class="page-header__header container header">
-      <div class="header__logo logo">
-        <a class="logo__link" href="main.html" aria-label="Logotype CH jewellery. Go to main page">
-          <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="img/sprite_auto.svg#logo"></use>
-          </svg>
-        </a>
+    <div class="page-header__header header">
+        <div class="header__logo logo container">
+          <a class="logo__link" href="main.html" aria-label="Logotype CH jewellery. Go to main page">
+            <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite_auto.svg#logo"></use>
+            </svg>
+          </a>
+        </div>
       </div>
-    </div>
   </header>
   <main class="page-main">
     <section class="page-main__login login container">
       <h2 class="visually-hidden">Log in</h2>
-          <article class="popup  login">
-            <button type="button" class="login__close-button popup__close-button">
-              <span class="visually-hidden">Close log in window</span>
-              <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_close"></use>
-              </svg>
-            </button>
-            <div class="login__wrapper">
-              <h2>
-                Log in
-              </h2>
-              <form class="form" action="#" method="post">
-                <fieldset>
-                  <ul>
-                    <li>
-                      <input type="email" name="email" placeholder="Your E-mail" id="email" required />
-                      <label class="visually-hidden" for="email">
-                        Fill in the required field e-Mail
-                      </label>
-                    </li>
-                    <li>
-                      <input type="password" name="password" placeholder="Password" id="password" required />
-                      <label for="password">
-                        <a href="#" aria-label="Recover password">Forgot your password?</a>
-                      </label>
-                    </li>
-                  </ul>
-                  <button class="button button--accent" type="submit">
-                    Log in
-                  </button>
-                  <div class="login__registration">
-                    <p>
-                      Don&#8242;t have an account?
-                    </p>
-                    <a href="#" aria-label="Go to registration page">
-                      Sign up
-                    </a>
-                  </div>
-                </fieldset>
-              </form>
-            </div>
-          </article>
-    </section>
-  </main>
-    <footer class="page-footer footer">
-      <div class="footer__wrapper container">
-        <section class="subscription">
-          <h2>The good stuff in your inbox</h2>
-          <form class="subscription__form form" action="#" method="post">
+          <h2>
+            Log in
+          </h2>
+          <form class="form" action="#" method="post">
             <fieldset>
-              <legend>
-                News and updates from CH. No spam, we promise.
-              </legend>
-              <input type="email" name="email" placeholder="Your E-mail" required />
-              <div class="subscription__button">
-                <a href=# aria-label="Go to registration page">
+              <ul>
+                <li>
+                  <input type="email" name="email" placeholder="Your E-mail" id="email" required />
+                  <label class="visually-hidden" for="email">
+                    Fill in the required field e-Mail
+                  </label>
+                </li>
+                <li>
+                  <input type="password" name="password" placeholder="Password" id="password" required />
+                  <label for="password">
+                    <a href="#" aria-label="Recover password">Forgot your password?</a>
+                  </label>
+                </li>
+              </ul>
+              <button class="button button--accent" type="submit">
+                Log in
+              </button>
+              <div class="login__registration">
+                <p>
+                  Don&#8242;t have an account?
+                </p>
+                <a href="#" aria-label="Go to registration page">
                   Sign up
                 </a>
-                <svg width="30" height="11" viewBox="0 0 30 11" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                  stroke="currentColor">
-                  <use xlink:href="img/sprite_auto.svg#icon_arrow-footer"></use>
-                </svg>
               </div>
             </fieldset>
           </form>
-        </section>
-        <section class="footer__nav nav-footer">
-          <h2 class="visually-hidden">Information menu</h2>
-          <nav>
-            <ul>
-              <li>
-                <a href="#" aria-label="Go to Ordering & Payment">
-                  Ordering & payment
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to Terms & Conditions">
-                  Terms & conditions
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to Returns & Exchanges">
-                  Returns & exchanges
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to Delivery">
-                  Delivery
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to About CH">
-                  About CH
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to Stores & Hours">
-                  Stores & hours
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to Jobs">
-                  Jobs
-                </a>
-              </li>
-              <li>
-                <a href="#" aria-label="Go to log in page">
-                  Contact us
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </section>
-        <section>
-          <div class="footer__social social">
-            <h2 class="visually-hidden">We are in social networks</h2>
-            <ul>
-              <li>
-                <a class="social__link" href="#">
-                  <svg width="8" height="15" viewBox="0 0 8 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-                    stroke="currentColor">
-                    <use xlink:href="img/sprite_auto.svg#icon_facebook"></use>
-                  </svg>
-                  <span>
-                    Facebook
-                  </span>
-                </a>
-              </li>
-              <li>
-                <a class="social__link" href="#">
-                  <svg class="social__icon" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor" stroke="currentColor">
-                    <use xlink:href="img/sprite_auto.svg#icon_instagram"></use>
-                  </svg>
-                  <span>
-                    Instagram
-                  </span>
-                </a>
-              </li>
-              <li>
-                <a class="social__link" href="#">
-                  <svg class="social__icon" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor" stroke="currentColor">
-                    <use xlink:href="img/sprite_auto.svg#icon_pinterest"></use>
-                  </svg>
-                  <span>
-                    Pinterest
-                  </span>
-                </a>
-              </li>
-              <li>
-                <a class="social__link" href="#">
-                  <svg class="social__icon" width="15" height="13" viewBox="0 0 15 13" xmlns="http://www.w3.org/2000/svg"
-                    fill="currentColor" stroke="currentColor">
-                    <use xlink:href="img/sprite_auto.svg#icon_twitter"></use>
-                  </svg>
-                  <span>
-                    Twitter
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
-    </footer>
+    </section>
+  </main>
+  <footer class="page-footer footer">
+    <div class="footer__wrapper container">
+      <section class="subscription">
+        <h2>The good stuff in your inbox</h2>
+        <form class="subscription__form form" action="#" method="post">
+          <fieldset>
+            <legend>
+              News and updates from CH. No spam, we promise.
+            </legend>
+            <input type="email" name="email" placeholder="Your E-mail" required />
+            <div class="subscription__button">
+              <a href=# aria-label="Go to registration page">
+                Sign up
+              </a>
+              <svg width="30" height="11" viewBox="0 0 30 11" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_arrow-footer"></use>
+              </svg>
+            </div>
+          </fieldset>
+        </form>
+      </section>
+      <section class="footer__nav nav-footer">
+        <h2 class="visually-hidden">Information menu</h2>
+        <nav>
+          <ul>
+            <li>
+              <a href="#" aria-label="Go to Ordering & Payment">
+                Ordering & payment
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to Terms & Conditions">
+                Terms & conditions
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to Returns & Exchanges">
+                Returns & exchanges
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to Delivery">
+                Delivery
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to About CH">
+                About CH
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to Stores & Hours">
+                Stores & hours
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to Jobs">
+                Jobs
+              </a>
+            </li>
+            <li>
+              <a href="#" aria-label="Go to log in page">
+                Contact us
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </section>
+      <section>
+        <div class="footer__social social">
+          <h2 class="visually-hidden">We are in social networks</h2>
+          <ul>
+            <li>
+              <a class="social__link" href="#">
+                <svg width="8" height="15" viewBox="0 0 8 15" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                  stroke="currentColor">
+                  <use xlink:href="img/sprite_auto.svg#icon_facebook"></use>
+                </svg>
+                <span>
+                  Facebook
+                </span>
+              </a>
+            </li>
+            <li>
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor" stroke="currentColor">
+                  <use xlink:href="img/sprite_auto.svg#icon_instagram"></use>
+                </svg>
+                <span>
+                  Instagram
+                </span>
+              </a>
+            </li>
+            <li>
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="15" height="15" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor" stroke="currentColor">
+                  <use xlink:href="img/sprite_auto.svg#icon_pinterest"></use>
+                </svg>
+                <span>
+                  Pinterest
+                </span>
+              </a>
+            </li>
+            <li>
+              <a class="social__link" href="#">
+                <svg class="social__icon" width="15" height="13" viewBox="0 0 15 13" xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor" stroke="currentColor">
+                  <use xlink:href="img/sprite_auto.svg#icon_twitter"></use>
+                </svg>
+                <span>
+                  Twitter
+                </span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </div>
+  </footer>
 
 </body>
 
